# azure-sphere-ds18b20

./: .gitignore  CMakeLists.txt  README.md  app_manifest.json  ds18b20.c  ds18b20.h  launch.vs.json  main.c  onewire.c
ds18b20/: CMakeLists.txt  ds18b20.c  ds18b20.h  onewire.c  onewire.h
